cell properties added

--- a/index.html
+++ b/index.html
@@ -36,14 +36,21 @@
         <option value="18">18</option>
         <option value="20">29</option>
       </select>
-      <span class="material-icons"> format_bold </span>
-      <span class="material-icons"> format_italic </span>
-      <span class="material-icons"> format_underlined </span>
-      <span class="material-icons"> format_align_left </span>
-      <span class="material-icons"> format_align_center </span>
-      <span class="material-icons"> format_align_right </span>
-      <span class="material-icons"> text_format </span>
-      <span class="material-icons"> format_color_fill </span>
+      <span class="material-icons bold"> format_bold </span>
+      <span class="material-icons italic"> format_italic </span>
+      <span class="material-icons underlined"> format_underlined </span>
+      <span class="left material-icons alignment"> format_align_left </span>
+      <span class="center material-icons alignment"> format_align_center </span>
+      <span class="right material-icons alignment"> format_align_right </span>
+
+      <div class="color-prop">
+        <span class="material-icons"> text_format </span>
+        <input type="color" class="text-color">
+      </div>
+      <div class="color-prop">
+        <span class="material-icons"> format_color_fill </span>
+        <input type="color" class="background-color">
+      </div>
     </div>
     <div class="formula-action-cont">
         <input type="text" readonly class="address-bar">
@@ -64,6 +71,7 @@
       </div>
       <div class="sheet-folder-cont">Sheet1</div>
     </div>
-    <script src="script.js"></script>
+    <script src="grid.js"></script>
+    <script src="cell_properties.js"></script>
   </body>
 </html>
