formulabar functionality added

--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@
     </div>
     <script src="grid.js"></script>
     <script src="cell_properties.js"></script>
+    <script src="formula.js"></script>
   </body>
 </html>
