--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </div>
     <script src="grid.js"></script>
     <script src="cell_properties.js"></script>
+    <script src="cycle_detection.js"></script>
     <script src="formula.js"></script>
   </body>
 </html>
