color Tracing added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <script src="grid.js"></script>
     <script src="cell_properties.js"></script>
     <script src="cycle_detection.js"></script>
+    <script src="cycle_trace.js"></script>
     <script src="formula.js"></script>
   </body>
 </html>
