--- a/index.html
+++ b/index.html
@@ -69,12 +69,16 @@
       <div class="sheet-add-icon">
         <span class="material-icons"> post_add </span>
       </div>
-      <div class="sheet-folder-cont">Sheet1</div>
+      <div class="sheet-folder-cont">
+        
+      </div>
     </div>
     <script src="grid.js"></script>
-    <script src="cell_properties.js"></script>
     <script src="cycle_detection.js"></script>
     <script src="cycle_trace.js"></script>
+    <script src="sheet_handling.js"></script>
+    <script src="cell_properties.js"></script>
+    
     <script src="formula.js"></script>
   </body>
 </html>
