--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="page-action">Help</div>
     </div>
     <div class="cell-action-cont">
-      <span class="material-icons"> content_copy </span>
-      <span class="material-icons"> content_cut </span>
-      <span class="material-icons"> content_paste </span>
+      <span class="material-icons copy"> content_copy </span>
+      <span class="material-icons cut"> content_cut </span>
+      <span class="material-icons paste"> content_paste </span>
       <select class="font-family-prop">
         <option value="monospace">Monospace</option>
         <option value="sans-serif">Sans-Serif</option>
@@ -78,7 +78,7 @@
     <script src="cycle_trace.js"></script>
     <script src="sheet_handling.js"></script>
     <script src="cell_properties.js"></script>
-    
     <script src="formula.js"></script>
+    <script src="cut_copy_paste.js"></script>
   </body>
 </html>
