--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="page-action-cont">
       <div class="page-action">Home</div>
-      <div class="page-action">File</div>
+      <div class="selected-action-prop">File</div>
       <div class="page-action">Insert</div>
       <div class="page-action">Layout</div>
       <div class="page-action">Help</div>
@@ -45,33 +45,35 @@
 
       <div class="color-prop">
         <span class="material-icons"> text_format </span>
-        <input type="color" class="text-color">
+        <input type="color" class="text-color" />
       </div>
       <div class="color-prop">
         <span class="material-icons"> format_color_fill </span>
-        <input type="color" class="background-color">
+        <input type="color" class="background-color" />
       </div>
+      <span class="material-icons upload"> file_upload </span>
+      <span class="material-icons download"> file_download </span>
     </div>
     <div class="formula-action-cont">
-        <input type="text" readonly class="address-bar">
-        <img class="formula-icon" src="https://img.icons8.com/ios-glyphs/50/000000/formula-fx.png"/>
-        <input type="text" class="forula-bar">
+      <input type="text" readonly class="address-bar" />
+      <img
+        class="formula-icon"
+        src="https://img.icons8.com/ios-glyphs/50/000000/formula-fx.png"
+      />
+      <input type="text" class="forula-bar" />
     </div>
     <div class="grid-cont">
-        <div class="top-left-dummy"></div>
-        <div class="address-col-cont"></div>
-        <div class="cell-cont">
+      <div class="top-left-dummy"></div>
+      <div class="address-col-cont"></div>
+      <div class="cell-cont">
         <div class="address-row-cont"></div>
-        </div>
-        
+      </div>
     </div>
     <div class="sheet-cont">
       <div class="sheet-add-icon">
         <span class="material-icons"> post_add </span>
       </div>
-      <div class="sheet-folder-cont">
-        
-      </div>
+      <div class="sheet-folder-cont"></div>
     </div>
     <script src="grid.js"></script>
     <script src="cycle_detection.js"></script>
@@ -80,5 +82,6 @@
     <script src="cell_properties.js"></script>
     <script src="formula.js"></script>
     <script src="cut_copy_paste.js"></script>
+    <script src="upload_download.js"></script>
   </body>
 </html>
